# localdomain

./: .gitignore  AUDIT-REPORT.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  prompt-saved.txt
daemon/: Cargo.toml
daemon/src/: logs.rs  main.rs  paths.rs  server.rs
daemon/src/caddy/: config.rs  process.rs
daemon/src/certs/: ca.rs  domain.rs  mod.rs  trust.rs
daemon/src/hosts/: mod.rs
daemon/src/tunnel/: cloudflared.rs  download.rs  manager.rs  mod.rs  ssh.rs
daemon/src/xampp/: config.rs  detect.rs  mod.rs  process.rs
logo/: logo.af
resources/: com.localdomain.daemon.plist  localdomain-daemon.service  uninstall-linux.sh  uninstall.sh
scripts/: build-linux-deb.sh  download-caddy-linux.sh  download-caddy.ps1  download-caddy.sh  install-daemon.ps1  install-daemon.sh  pre-bundle.cjs  reinstall-service.ps1  reload-daemon-linux.sh  reload-daemon.ps1  reload-daemon.sh  test-ca-trust.ps1  test-pipe.ps1
shared/: Cargo.toml
social/: producthunt-first-comment.md  reddit-post-devtools.md  reddit-post-webdev.md  reddit-post.md  tweet.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs  state.rs  tray.rs  xampp.rs
src-tauri/src/commands/: access_log.rs  audit.rs  domains.rs  mod.rs  service.rs  settings.rs  tunnel.rs
src-tauri/src/daemon_client/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
website/: package-lock.json  package.json  theme.config.tsx
(+43 files in other folders)
