[package]
name = "localdomain-daemon"
version = "0.1.2"
edition = "2021"

[dependencies]
localdomain-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = ["Win32_Security", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Foundation"] }
